Fixed a bug with the text on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   --clr-secondary: #c4c4c4;
   --fs-xxl: clamp(2rem, 2rem + 2vw, 4.2rem);        
   --fs-xl: clamp(1.25rem, 1.25rem + 1.5vw, 2.5rem);  
-  --fs-l: clamp(1rem, .9rem + 1vw, 2rem);    
+  --fs-l: clamp(1rem, .85rem + 1.05vw, 2rem);    
   --fs-m: clamp(.9rem, .8rem + .9vw, 1.5rem);     
   --fs-s: clamp(.8rem, .7rem + .8vw, 1.25rem); 
   --fs-xs: clamp(.7rem, .6rem + .7vw, 1rem);  
@@ -323,7 +323,6 @@ body {
 .home-quotes blockquote {
   color: var(--clr-primary);
   font-size: var(--fs-m);
-  letter-spacing: 1px;
 }
 
 #bq1 {
@@ -1169,6 +1168,10 @@ body {
     "...... img    ......"
     "...... main   ......"
     ;
+  }
+
+  .home-quotes blockquote {
+    letter-spacing: 1px;
   }
 }
 
